<resources>
    <string name="app_name">Recordings</string>
    <string name="record_name_title">Name</string>
    <string name="button">Button</string>
    <string name="record_name">record name</string>
    <string name="player_button_play">Play</string>
    <string name="player_button_pause">Pause</string>
    <string name="player_button_resume_play">Resume playing</string>
    <string name="zero_time">0:00:00</string>
    <string name="recorder_title_recording">Recording</string>
    <string name="recorder_button_stop">Stop</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_title_save">Save</string>
    <string name="dlg_folder_name_title">Create folder</string>
    <string name="dlg_recording_name_title">Save recording</string>
    <string name="dlg_folder_name_subtitle">enter folder name below</string>
    <string name="dlg_recording_name_subtitle">enter name of recording below</string>
</resources>
