<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayerActivity">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:text="@string/record_name_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:layout_gravity="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editRecordName"
                android:inputType="textPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text=""
                android:hint="@string/record_name"
                android:autofillHints="" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/ll3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|start"
                android:layout_marginStart="10dp"
                android:text="@string/zero_time"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="10dp"
                android:text="@string/zero_time"
                android:textSize="18sp" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/ll4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="100"
                android:progress="50" />

            <Button
                android:id="@+id/playButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:onClick="onClickPlay"
                android:text="@string/player_button_play" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>